--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ python:
   - "3.7-dev"  # 3.7 development branch
   - "pypy2.7"
   - "pypy3.5"
+sudo: false
 install:
   - pip install .[test] codecov
 script:
